# simples

./: .gitignore  Cargo.toml  LICENSE  README.md
disklog/: Cargo.toml
disklog/examples/: disklog-simple.rs  simple.rs
disklog/src/: checksum.rs  lib.rs  open.rs  reader.rs  tail.rs  writer.rs
disklog/tests/: exclusive_write_access.rs  read_and_write.rs
simples/: Cargo.toml
simples/src/: append.rs  appendqueue.rs  bodyreader.rs  config.rs  error.rs  main.rs  query.rs  read.rs  topicname.rs  writequeue.rs
