[package]
name = "disklog"
version = "0.1.0"
authors = ["Tom Cumming <mail@tomcumming.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
futures = "0.3.8"
nix = "0.19.0"

[dev-dependencies]
tempdir = "0.3.7"
