[package]
name = "simples"
version = "0.1.0"
authors = ["Tom Cumming <mail@tomcumming.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disklog = { path = "../disklog" }
tokio = { version = "0.3.4", features = ["full"] }
# TODO pin to next release so we can use tokio 0.3
hyper = { git = "https://github.com/hyperium/hyper", rev = "121c33132c0950aaa422848cdc43f6691ddf5785", features= ["stream", "tcp", "server", "http1"] }
futures = "0.3.8"
bytes = "0.6.0"
