[package]
name = "simples"
version = "0.1.1"
authors = ["Tom Cumming <mail@tomcumming.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disklog = { path = "../disklog" }
tokio = { version = "1.0.1", features = ["full"] }
# TODO pin to next release so we can use tokio 0.3
hyper = { version = "0.14.2", features= ["stream", "tcp", "server", "http1"] }
futures = "0.3.8"
bytes = "1.0.0"
